--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+  "Key": "a8s7d6f5g4h3j2k1l0z9x8c7v6b5n4m3",
+  "Issuer": "genesis",
+  "Audience": "genesis"
+},
   "AllowedHosts": "*"
 }
 
