--- a/appsettings.json
+++ b/appsettings.json
@@ -6,10 +6,13 @@
     }
   },
   "Jwt": {
-  "Key": "a8s7d6f5g4h3j2k1l0z9x8c7v6b5n4m3",
-  "Issuer": "genesis",
-  "Audience": "genesis"
-},
+    "Key": "a8s7d6f5g4h3j2k1l0z9x8c7v6b5n4m3",
+    "Issuer": "genesis",
+    "Audience": "genesis"
+  },
+  "OpenAI": {
+    "Model": "gpt-4o-mini",
+    "Strict": true
+  },
   "AllowedHosts": "*"
 }
-
